Fixed add buttons inserting content in wrong position

--- a/app/assets/stylesheets/koi/inline_forms.scss
+++ b/app/assets/stylesheets/koi/inline_forms.scss
@@ -74,6 +74,7 @@
   width: 50px;
   height: 26px;
   margin-left: 15px;
+  margin-right: -5px;
   background: url("/assets/koi/application/icon-collapse-down.png") center no-repeat;
   cursor: pointer;
 
